pulsar/cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar-standalone
  namespace: pulsar
  labels:
    app: pulsar-standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsar-standalone
  template:
    metadata:
      labels:
        app: pulsar-standalone
    spec:
      containers:
        - name: pulsar
          image: apachepulsar/pulsar:3.2.4
          args: ["bin/pulsar", "standalone"]
          ports:
            - containerPort: 6650
              name: pulsar
            - containerPort: 8080
              name: http
#          volumeMounts:
#            - name: pulsar-data
#              mountPath: /pulsar/data
#            - name: pulsar-conf
#              mountPath: /pulsar/conf
          resources:
            requests:
              memory: "0.5Gi"
              cpu: "0.1"
            limits:
              memory: "3Gi"
              cpu: "1"
        - name: pulsar-setup
          image: apachepulsar/pulsar:3.2.4
          command: ["/bin/sh", "/pulsar-setup/setup.sh"]
          resources:
            requests:
              memory: "0.1Gi"
              cpu: "0.1"
            limits:
              memory: "1Gi"
              cpu: "0.5"
          volumeMounts:
            - name: pulsar-setup-script
              mountPath: /pulsar-setup
      volumes:
        - name: pulsar-data
          persistentVolumeClaim:
            claimName: pulsar-data-pvc
        - name: pulsar-conf
          configMap:
            name: pulsar-config
        - name: pulsar-setup-script
          configMap:
            name: pulsar-setup-cm
            defaultMode: 0755
