pulsar/cluster/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pulsar
  namespace: pulsar
  labels:
    app: pulsar-standalone
spec:
  ports:
    - port: 6650
      targetPort: 6650
      protocol: TCP
      name: pulsar
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: pulsar-standalone
  type: ClusterIP
